fix about me text alignment on mobile device

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1066,7 +1066,7 @@ footer {
     }
 
     #aboutme-text {
-        max-width: none;
+        max-width: 100%;
         text-align: justify;
     }
 }
